# memori

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INTEGRATION_MODERNIZATION_SUMMARY.md  LICENSE  LOCOMO_BENCHMARK_README.md  MIGRATION_GUIDE.md  PROJECT_SUMMARY.md  README.md  UNIVERSAL_ARCHITECTURE_SUMMARY.md  UNIVERSAL_INTEGRATION_SUMMARY.md  advanced_example.py  anthropic_test.py  auto_ingest_example.py  azure_openai_test.py  context.md  contextv2.md  debug_context_injection.py  debug_interceptor.py  debug_memory.py  demo_fixed_approaches.py  digital_ocean_example.py  edge_case_tests.py  example.py  final_test.py  fix_corrupted_context.py  litellm_mysql_test_suite.py  litellm_native_callback_example.py  litellm_postgresql_test_suite.py  litellm_test.py  litellm_test_CI.py  litellm_test_new.py  litellm_test_suite.py  locomo_benchmark_quick_demo.py  locomo_demo_results.json  locomo_full_benchmark.py  memori_architecture-v1.md  memori_architecture.md  memori_example.py  (+34 more)
.github/scripts/: create-dependency-pr.js  generate_docs.py
.github/workflows/: README-auto-docs.md  auto-docs-generation.yml  auto-format.yml  ci.yml  code-format.yml  dependencies.yml  dependency-update.yml  docs-generation.yml  docs-preview.yml  docs.yml  release.yml  security-scan.yml  security.yml
demos/personal_diary_assistant/: .env.example  demo.py  diary_assistant.py  streamlit_app.py
demos/personal_diary_assitant/: README.md  demo.py  requirements.txt
demos/researcher_agent/: .env.example  README.md  app.py  requirements.txt  researcher.py
demos/smart_shopping/: smart_shopping_README.md  smart_shopping_demo.py
demos/smart_shopping_assistant/: README.md  smart_shopping_README.md  smart_shopping_demo.py
demos/travel_planner/: .env.example  README.md  app.py  requirements.txt  travel_agent.py
docs/: README.md  architecture.md  contributing.md  features.md  index.md  provider_configuration.md  requirements.txt
docs/configuration/: database.md  providers.md  settings.md
docs/conscious-ingestion/: agents.md  overview.md
docs/core-concepts/: agents.md  overview.md
docs/examples/: agno-integration.md  basic-usage.md  basic.md  crewai-integration.md  digital-ocean-integration.md  fastapi-multiuser-app-integration.md  langchain-integration.md  multiagent-shared-memory-integration.md  overview.md  simple-multiuser-integration.md  swarms-integration.md
docs/getting-started/: basic-usage.md  installation.md  quick-start.md
docs/integrations/: overview.md
docs/open-source/: architecture.md  features.md
docs/overrides/: main.html
examples/: README.md  advanced_config.py  advanced_usage.py  basic_usage.py  conscious_ingestion_demo.py  conscious_ingestion_example.py  memori.json  openai_interceptor_example.py  personal_assistant.py  personal_assistant_advanced.py  test_providers.py  universal_integration_example.py
examples/advanced/: multi_agent_memory.py
examples/basic_usage/: personal_assistant.py  simple_memory.py
examples/databases/: mysql_demo.py  postgres_demo.py  sql_demo.py  sqlite_demo.py
examples/integrations/: agno_example.py  azure_ai_foundry_example.py  crewai_example.py  digital_ocean_example.py  langchain_example.py  litellm_example.py  openai_agent_example.py  swarms_example.py
examples/multiple-agents/: multiagent_shared_memory.py
examples/multiple-users/: README.md  fastapi_multiuser_app.py  simple_multiuser.py
examples/support/: azure_example.py  litellm_example.py  ollama_example.py  openai_example.py
issues/: 11.md
issues/18/: notes.md
memori/: __init__.py
memori/agents/: conscious_agent.py  memory_agent.py  retrieval_agent.py
memori/config/: memory_manager.py  universal_memory_manager.py
memori/core/: __init__.py  conversation.py  database.py  memory.py  memory_manager.py  pattern_manager.py  providers.py  providers_base.py
memori/database/: auto_creator.py  connection_utils.py  models.py  query_translator.py  search_service.py  sqlalchemy_manager.py
memori/evaluation/: __init__.py  judge_client.py  qa_evaluator.py  summary_evaluator.py
memori/integrations/: __init__.py  anthropic_integration.py  anthropic_interceptor.py  litellm_integration.py  openai_integration.py  openai_interceptor.py
memori/interceptors/: __init__.py  anthropic_interceptor.py  base.py  http_interceptor.py  litellm_interceptor.py  manager.py  openai_interceptor.py
memori/locomo/: __init__.py  benchmark_suite.py  conversation_processor.py  data_loader.py  data_models.py  memory_builder.py  real_memory_processor.py
memori/metrics/: __init__.py  performance_tracker.py  score_calculator.py
memori/tools/: __init__.py  memory_tool.py
memori/utils/: input_validator.py  logging.py  pydantic_models.py  query_builder.py  security_audit.py  security_integration.py  transaction_manager.py
memoriai/: __init__.py
memoriai/agents/: __init__.py  conscious_agent.py  memory_agent.py  retrieval_agent.py
memoriai/config/: __init__.py  manager.py  settings.py
memoriai/core/: __init__.py  agent.py  database.py  memory.py
memoriai/database/: __init__.py
memoriai/integrations/: __init__.py  anthropic_integration.py  litellm_integration.py  openai_integration.py
memoriai/scripts/: llm_text.py
memoriai/tools/: __init__.py  memory_tool.py
memoriai/utils/: __init__.py  enums.py  exceptions.py  helpers.py  logging.py  pydantic_models.py  validators.py
scripts/: README.md  docs.bat  docs.sh  docs_dev.py  serve-docs.py
tests/: README.md  __init__.py  comprehensive_database_comparison.py  conftest.py  openai_three_tier_test_suite.py  pytest.ini  run_tests.py  test_basic_functionality.py  test_conversation_recording.py  test_inputs.json  test_interceptor_integration.py  test_openai_recording.py
tests/fixtures/: __init__.py  sample_data.py  test_helpers.py
tests/integration/: __init__.py  test_database_operations.py  test_llm_integrations.py
tests/litellm_support/: litellm_test.py  litellm_test_suite.py
tests/mysql_support/: README.md  compare_databases.py  litellm_mysql_test.py  litellm_mysql_test_suite.py  mysql_test_suite.py  setup_mysql.py
(+55 files in other folders)
